--- a/image_processing.ipynb
+++ b/image_processing.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,18 +34,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/cronin.104/anaconda3/envs/astroconda/lib/python3.7/site-packages/IPython/core/interactiveshell.py:3044: DtypeWarning: Columns (10) have mixed types.Specify dtype option on import or set low_memory=False.\n",
-      "  interactivity=interactivity, compiler=compiler, result=result)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "galbase = pd.read_csv('samples/galbase_info.csv')\n",
     "samp = pd.read_csv('samples/sne_sample.csv')"
@@ -53,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,15 +212,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Output the rgrid maps. Manually change the filename if for w4 to 'rgrid/%s/%s_%s_gauss15_rgrid.fits'% (res,pgc,res)\n",
-    "Probably want to use w1 for both gauss7p5 and gauss15 if possible.\n",
-    "\n",
-    "###### Do we need W4 rgrid maps once W4 is masked, interped, and convolved?"
+    "Output the rgrid maps. Manually change the filename if for w4 to 'rgrid/%s/%s_%s_w4_rgrid.fits'% (res,pgc,res)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +232,6 @@
     "        pgc = row['PGC']\n",
     "        \n",
     "        # skip if rgrid map is already built for this galaxy; pick up where we left off\n",
-    "        \n",
     "        if w4 is not True:\n",
     "            if os.path.isfile('rgrid/%s/%s_%s_rgrid.fits'% (res,pgc,res)) is True:\n",
     "                continue\n",
@@ -290,60 +277,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d2888b27339d41b78a013af2a190c222",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "FloatProgress(value=0.0)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b4b72b55d24f469babcc9c2f8aef66c2",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "FloatProgress(value=0.0)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3093a4e20d4041ab9810cf8757343708",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "FloatProgress(value=0.0)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# output_rgrid_maps(samp, '1kpc',  False)\n",
-    "# output_rgrid_maps(samp, '2kpc',  False)\n",
-    "# output_rgrid_maps(samp, '500pc', False)\n",
-    "\n",
-    "output_rgrid_maps(samp, '1kpc', True)\n",
-    "output_rgrid_maps(samp, '2kpc', True)\n",
-    "output_rgrid_maps(samp, '500pc', True)"
+    "output_rgrid_maps(samp, '2kpc',  False)\n",
+    "output_rgrid_maps(samp, '2kpc', True)"
    ]
   },
   {
@@ -362,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,6 +315,9 @@
     "    bar = ProgressBar(len(samp), ipython_widget=True)\n",
     "    for index, row in samp.iterrows():\n",
     "        pgc = row['PGC']\n",
+    "        \n",
+    "        if os.path.isfile('rgrid/fuv_on_w4_%s/%s_fuv_on_w4_%s.fits'% (res,pgc,res)) is True:\n",
+    "            continue\n",
     "        \n",
     "        try:\n",
     "            hdulist_fuv = pyfits.open('/data/kant/0/leroy.42/allsky/convolved/%s/%s_fuv_%s.fits' % (res,pgc,res))\n",
@@ -396,65 +338,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bccffd0f55124a3caf0dbe095fbfd449",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "FloatProgress(value=0.0)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: FITSFixedWarning: RADECSYS= 'FK5 ' / Reference frame \n",
-      "the RADECSYS keyword is deprecated, use RADESYSa. [astropy.wcs.wcs]\n",
-      "WARNING: FITSFixedWarning: RADECSYS= 'FK5 ' / Reference frame \n",
-      "the RADECSYS keyword is deprecated, use RADESYSa. [astropy.wcs.wcs]\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c6283d2b04c3430c804133331eceb271",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "FloatProgress(value=0.0)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "85af914087dd4373b7945020a287d668",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "FloatProgress(value=0.0)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "reproject_fuv_on_w4(samp, '500pc')\n",
-    "reproject_fuv_on_w4(samp, '1kpc')\n",
     "reproject_fuv_on_w4(samp, '2kpc')"
    ]
   },
@@ -482,7 +369,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
